<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background">
<ScrollView 
   		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scrollbarStyle="outsideOverlay"
		android:scrollbarSize="2dip"
		android:fitsSystemWindows="true"
		android:layout_above="@+id/myFooter"
    	>
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <TextView 
        android:id="@+id/Txttitle"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:layout_margin="5dp"
            />
    <ImageView 
         android:id="@+id/imageLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_below="@+id/Txttitle"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="5dp"
        />
        
        
    	 <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_marginTop="10dip"
               
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal"
                android:padding="5dp" 
               >
				<TextView
				android:id="@+id/productIdLbl"
				 android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.03"
				android:textSize="14sp"
				android:textStyle="bold"
				android:text="@string/ProductId"
			    />
			    <TextView
			        android:id="@+id/productIdTxt"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text=""
			        android:textSize="14sp"
					android:textStyle="bold"
					android:layout_marginLeft="20dp"
			        />
			   
     </LinearLayout>
      <ImageView 
		        android:id="@+id/imageLine"
		        android:layout_width="280dp"
		        android:layout_height="wrap_content"
		        android:src="@drawable/pro_line"
		        android:layout_below="@+id/linearLayout1"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
                />
     
      	 <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_marginTop="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal"
                android:padding="5dp" 
               >
				<TextView
				android:id="@+id/productNameLbl"
				android:layout_height="wrap_content"
				android:layout_weight="0.03"
				android:textSize="14sp"
				android:textStyle="bold"
				android:layout_width="150dp"
				android:text="@string/ProductName"
			    />
			    <TextView
			        android:id="@+id/productNameTxt"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text=""
			        android:textSize="14sp"
					android:textStyle="bold"
					android:layout_marginLeft="20dp"
			        />
			    
     </LinearLayout>
	 <ImageView 
		        android:id="@+id/imageLine"
		        android:layout_width="280dp"
		        android:layout_height="wrap_content"
		        android:src="@drawable/pro_line"
		        android:layout_below="@+id/linearLayout2"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
                />
    <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_marginTop="10dip"
                 
                 android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal"
                android:padding="5dp" 
               >
				<TextView
				android:id="@+id/productPriceLbl"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.03"
				android:textSize="14sp"
				android:textStyle="bold"
				android:text="@string/Price"
			    />
			    <TextView
			        android:id="@+id/productPriceTxt"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text=""
			        android:textSize="14sp"
					android:textStyle="bold"
					android:layout_marginLeft="20dp"
			        />
			    
     </LinearLayout>
      <ImageView 
		        android:id="@+id/imageLine"
		        android:layout_width="280dp"
		        android:layout_height="wrap_content"
		        android:src="@drawable/pro_line"
		        android:layout_below="@+id/linearLayout3"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
                />
     <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_marginTop="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal"
                android:padding="5dp" 
               >
				<TextView
				android:id="@+id/productManuLbl"
				 android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.03"
				android:textSize="14sp"
				android:textStyle="bold"
				android:text="@string/Manu"
			    />
			    <TextView
			        android:id="@+id/productManuTxt"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text=""
			        android:textSize="14sp"
					android:textStyle="bold"
					android:layout_marginLeft="20dp"
			        />
			  
     </LinearLayout>	 
      <ImageView 
		        android:id="@+id/imageLine"
		        android:layout_width="280dp"
		        android:layout_height="wrap_content"
		        android:src="@drawable/pro_line"
		        android:layout_below="@+id/linearLayout4"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="10dp"
        		android:layout_marginRight="10dp"
                />
      <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_marginTop="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal"
                android:padding="5dp" 
               >
				<TextView
				android:id="@+id/productBarcodeLbl"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.03"
				android:textSize="14sp"
				android:textStyle="bold"
				android:text="@string/BarCode"
			    />
			    <TextView
			        android:id="@+id/productBarcodeTxt"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text=""
			        android:textSize="14sp"
					android:textStyle="bold"
					android:layout_marginLeft="20dp"
			        />
			    
     </LinearLayout>	 
     
       <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_marginTop="10dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal"
                android:padding="5dp" 
               >
				<TextView
				android:id="@+id/LocationDetlbl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="0.03"
				android:textSize="18sp"
				android:textStyle="bold"
				android:text=""
				android:visibility="gone"
				android:gravity="center"
			    />
			</LinearLayout>
      
      
    	 <TableLayout
    	     			android:layout_width="315dp"
    	     			android:layout_marginLeft="2dp"
    	     			android:layout_marginRight="2dp"
    	     			android:layout_height="fill_parent"
						android:layout_marginTop="5dp"
						android:stretchColumns="1"
						android:id="@+id/LocationDetailsTbl"
						android:visibility="gone"
						>
				<TableRow
				    android:background="@layout/table_row"	
				    android:layout_centerHorizontal="true" 
				     >
				    <TextView
				            android:text="@string/Address"
				            android:layout_width="150dp"
				            android:padding="3dip" 
				            android:layout_marginLeft="5dp"
				            android:textStyle="bold"
				            android:textSize="16sp"
				               /> 
				    <TextView
				            android:text="@string/Price"
				            android:padding="3dip"
				            android:textStyle="bold"
				            android:textSize="16sp"
				            android:layout_width="150dp"
				                   />
				   
				</TableRow>

			 </TableLayout>
    	 
    	 
     <LinearLayout
			       android:id="@+id/linearErrorMsg"
			       android:layout_width="wrap_content"
			       android:layout_height="wrap_content"
			       android:layout_marginLeft="10dp"
			       android:orientation="horizontal"
			       android:layout_marginTop="5dp"
			       android:padding="5dp" 
			       android:visibility="gone"
			       android:layout_below="@+id/ProductDet"
			       android:background="@layout/error"
			       >	
	 <ImageView 
         android:id="@+id/warningimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/warning"
         android:layout_margin="5dp"
        />
	   <TextView
	    	    android:id="@+id/msgLbl"
	    	    android:layout_height="wrap_content"
	    	    android:layout_width="wrap_content"
	    	    android:layout_marginTop="10dp"
	    	    android:layout_marginLeft="5dp"
	    	    android:layout_marginBottom="5dp"
	    	    android:layout_marginRight="5dp"   	
	    	    android:textSize="14sp"   
		        android:text=""
		      	    	    />
	   </LinearLayout>
   </LinearLayout>
</LinearLayout>

</ScrollView>
 <RelativeLayout android:id="@+id/myFooter"
        android:layout_alignParentBottom="true" android:layout_height="65dp"
        android:layout_width="fill_parent"
        android:background="#C2C2C2">
        <Button
        android:id="@+id/scan_button"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:text="@string/scan"
		android:gravity="left"
 		android:drawablePadding="12dp"
 		android:drawableLeft="@drawable/scan_icon"
	    android:background="@layout/button_style"
	    android:textColor="#FFFFFF"
	    android:textSize="20sp"
	    android:paddingTop="15dp"
	    android:paddingBottom="0dp"
	    android:paddingRight="5dip"
        android:singleLine="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
           	         />
         <Button
        android:id="@+id/home_button"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/home"
	    android:background="@layout/button_style"
	    android:textColor="#FFFFFF"
	    android:textSize="20sp"
	    android:layout_marginLeft="140dp"
	   	android:layout_centerVertical="true"
	        	         />
    </RelativeLayout>
</RelativeLayout>
